--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -15,17 +15,17 @@
 	.lg-only{display:block}	
 }
 
-@media only screen and (min-width:1441px) and (max-width: 1580px){
+@media only screen and (min-width:1441px) and (max-width:1580px){
 	.fixed-quick{right:-50px}
-	.main-cont {justify-content: flex-start; gap: 20px;}
-	.main-info-right {width: 260px;}
-	.more-link-area > a {font-size: 23px;}
+	.main-cont {justify-content:flex-start; gap:20px}
+	.main-info-right {width:260px}
+	.more-link-area > a {font-size:23px}
 }
 
 @media only screen and (max-width:1440px){
-	header .menu-area .menu-box .link-group li .link-item {margin-top: 16px;}
-	header .menu-area .menu-box .link-group li > .tit {font-size: 20px;}
-	header .menu-area .menu-box .link-group li .link-item a {font-size: 16px;}
+	header .menu-area .menu-box .link-group li .link-item {margin-top:16px}
+	header .menu-area .menu-box .link-group li > .tit {font-size:20px}
+	header .menu-area .menu-box .link-group li .link-item a {font-size:16px}
 
 	/* 레이아웃 공통 */
 	header,
@@ -42,12 +42,12 @@
 	.main-counseling-card{padding:16px}
 	.main-counseling-detail > h5{font-size:20px}
 	.main-counseling-detail > .main-counseling-num{font-size:20px}
-	.more-link-area > a {font-size: 23px;}
+	.more-link-area > a {font-size:23px}
 }
 
 @media only screen and (max-width:1080px){
 	/* 임시 보고용 구분 텍스트 */
-	.temp-page-txt {display: none;} 
+	.temp-page-txt {display:none} 
 
 	/* LMP_001 지자체 메인 상단 */
 	.main-cont{flex-direction:column}
@@ -66,20 +66,20 @@
 	/* 헤더 공통 */
 	header{height:56px}
 	header .menu-area .open-btn{width:24px;height:24px;background-size:contain}
-	header .menu-area .open-btn ~ .menu-box {display: none;}
+	header .menu-area .open-btn ~ .menu-box {display:none}
 	header .multi-logo-area a{display:inline-flex;align-items:center}
 	header .multi-logo-area a:nth-child(1) > img{width:96px;height:24px;object-fit:cover}
 	header .multi-logo-area a:nth-child(1):after{display:none}
 	header .multi-logo-area a:nth-child(2){padding-left:0}
 	header .multi-logo-area a:nth-child(2) > img{width:90px;height:24px}
-	header .menu-area .log-info {display: none;}
+	header .menu-area .log-info {display:none}
 
 	/* 푸터 공통 */
-	footer .info-content address > span.txt span + span {margin-left: 2px;}
-	footer .info-content address > span.tel span + span {margin-left: 2px;}
+	footer .info-content address > span.txt span + span {margin-left:2px}
+	footer .info-content address > span.tel span + span {margin-left:2px}
 	/* 컨텐츠 공통 */
 	.container{padding:20px 20px 28px}
-	.top-info-group{margin-top:40px}
+	.top-info-group{margin-top:40px;margin-bottom:12px}
 	.top-info-group h3{font-size:24px}
 	.page-header-tit{font-size:26px}
 	.page-header-desc{margin-top:12px;text-align:left}
@@ -96,6 +96,8 @@
 	textarea,
 	select, 
 	option{height:40px}
+	
+	.btns{width:100%;height:40px;padding:9px 16px 8px;font-size:16px}
 
 	table{font-size:18px}
 	.com-write-table table th{padding:0 8px}
@@ -107,13 +109,14 @@
 	.steps.flex-acjc{gap:2%}
 	.steps li span{font-size:15px}
 	.steps li strong{font-size:18px}
-	.steps li span::before{width:82px;height:82px;margin-bottom:3px;background-size:auto 189px}
+	.steps li span::before{width:82px;height:82px;margin-bottom:3px;background-size:auto 188px}
 	.steps .step02::before{background-position:-107px 0}
 	.steps .step03::before{background-position:-214px 0px}
 	.steps .step04::before{background-position:-321px 0}
 	.steps .step05::before{background-position:-428px 0}
-	.steps .step06::before{background-position:-535px 0}
+	.steps .step06::before{background-position:-532px 0}
 	.steps .step07::before{background-position:-643px 0px}
+	.steps .step08::before{background-position:-745px 0px}
 	/* 활성화 */
 	.steps li.active .step01::before{background-position:0 -107px}
 	.steps li.active .step02::before{background-position:-107px -107px}
@@ -122,6 +125,7 @@
 	.steps li.active .step05::before{background-position:-428px -107px}
 	.steps li.active .step06::before{background-position:-535px -107px}
 	.steps li.active .step07::before{background-position:-643px -107px}
+	.steps li.active .step08::before{background-position:-750px -107px}
 
 	hr{margin:40px 0}
 
@@ -140,29 +144,58 @@
 	.basic-info .input-group .email,
 	.basic-info .input-group .email+select{width:calc(50% - 5px)}
 	.basic-info .input-group .email-id{width:calc(100% - 26px)}
+	.basic-info input[type=number]{flex:calc(100% - 20px)}
 	.asterisk-list{font-size:16px}
+	
+	/* 완료 공통 */
+	.complete-area{margin-top:0}
+	.complete-wrap{font-size:18px}
+	.complete-wrap::before{margin-bottom:40px}
+	.complete-wrap strong{font-size:24px}
+	.complete-wrap .mssg{margin-top:26px}
 
-	/* 우수이용자 신청 */	
+	/* 인증구분 공통 */	
 	hr+.auth-area{margin-top:40px}
 	.auth-area-in{gap:16px}
 	.auth-area-in button{flex:calc(50% - 8px);height:126px;font-size:16px}
 	.auth-area-in button::before{height:58px;margin-bottom:8px;background-size:100% !important}
 	.auth-area-in button.simple::before{width:90px}
-	.auth-area-in button:not(.simple)::before{width:56px}
+	.auth-area-in button:not(.simple)::before{width:56px}		
 
-	.basic-info input[type=number]{flex:calc(100% - 20px)}
-
-	/* 우수이용자 신청 완료 */
-	.complete-area{margin-top:0}
-	.complete-wrap::before{margin-bottom:40px}
-	.complete-wrap strong{font-size:24px}
-
-	/* LAM 평생교육이용권 신청 */
+	/* 동의박스 공통 */
 	.agree-box{padding:20px 16px}	
+	.agree-box .agree-tit{font-size:20px}
 	.agree-box .agree{gap:12px}
 	.agree-box .agree-radio{flex-wrap:wrap;padding:16px;gap:16px}
+	.agree-box .agree-radio > span{font-size:20px}
 	.agree-box .agree + .agree{padding-top:26px}
 	.asterisk-list .agree-btn{display:block;margin-top:8px;margin-left:-21px}
+
+	/* 주소 공통 */
+	.address .input-group .flex-ac{flex-wrap:nowrap}
+	.address .input-group .fixed-width{width:calc(100% - 100px)}
+	.address .input-group .btns{width:100px}
+
+	/* LAM_102 평생교육이용권 신청 2단계 */
+	.available-tickets{margin-top:12px;border-left:0;border-right:0}
+	.available-tickets > li{flex-direction:column}
+	.available-tickets > li strong{display:block;width:100%;padding:26px 8px 6px;font-size:18px; text-align:left}
+	.available-tickets > li strong br{display:none}
+	.available-tickets .color-primary{font-size:16px}
+	.available-tickets > li .disc{width:100%;padding:10px 8px}
+	.available-tickets > li .disc .price{font-size:18px}
+	.available-tickets > li .disc .bullet-list{font-size:18px}
+	.available-tickets > li .btns{width:120px; margin:20px auto}
+
+	/* LAM_103 평생교육이용권 신청 3단계 */			
+	.agree-box.learning .agree-radio, 
+	.agree-box.learning .btn-bd{margin-top:16px}
+	.agree-box.learning .radio-box label:not(:last-of-type){margin-right:16px}	
+
+	/* LAM_105 평생교육이용권 신청 완료 */
+	.complete-wrap.border-box{padding:20px 16px}
+	.complete-wrap.border-box+p{margin-top:10px; font-size:16px}
+	.complete-area+.page-header{margin-top:40px}
 
 	/* 푸터 공통 */
 	footer .info-content{padding:20px 0}
@@ -171,7 +204,7 @@
 	footer .info-content address > span{font-size:16px}
 	footer .info-content .link-area .link-box{flex-wrap:wrap;row-gap:12px;column-gap:24px}
 	footer .info-content .family-select-wrap{position:static;margin-bottom:20px}
-	footer .info-content .family-select-lg > button{width:100%;}
+	footer .info-content .family-select-lg > button{width:100%}
 
 	/* 페이지네이션 공통 */
 	.com-paging{gap:6.4px;padding:0 9.2px}
@@ -233,8 +266,8 @@
 	.main-search-box > select{min-width:0;width:112px;font-size:18px;padding:0 32px 0px 8px;background-position:right 8px center} 
 	.main-search-box button{width:50px;font-weight:500;font-size:18px;border-radius:6px}
 	.main-counseling{padding:60px 0 16px 0}
-	.main-counseling-card{padding:16px 16px 14px 16px;align-items:flex-start; width: 100%; position: relative;}
-	.main-counseling-ico { position: absolute; right: 16px; top: 16px;}
+	.main-counseling-card{padding:16px 16px 14px 16px;align-items:flex-start; width:100%; position:relative}
+	.main-counseling-ico { position:absolute; right:16px; top:16px}
 	.main-counseling-card > .card-wrap{flex-direction:column;gap:8px;align-items:flex-start;max-height:none}
 	.main-counseling-card .main-counseling-label{font-size:18px;height:auto;padding:8px 12px}
 	.main-counseling-ico > a{width:40px;height:40px}
