--- a/css/biz2/common.css
+++ b/css/biz2/common.css
@@ -92,7 +92,9 @@
 .flex-acjc {display: flex; align-items: center; justify-content: center;}
 .il-flex-ac {display: inline-flex; align-items: center;}
 .flex-je {display: flex; justify-content: end;}
+.flex-dc{display: flex;flex-direction: column;}
 .hidden {display: none;}
+.flex-align-top {align-items: flex-start!important;}
 
 
 /* display */
